# shorter

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ec56027022db_create_urls_table.py
shorter/: config.py  context.py  dto.py  utils.py
shorter/api/: __init__.py
shorter/api/v1/: __init__.py  routes.py
shorter/api/v1/urls/: models.py  routes.py
shorter/database/: base.py  models.py
shorter/repositories/: __init__.py  base.py  urls.py
shorter/services/: base.py  urls.py
