[tool.poetry]
name = "shorter"
version = "0.1.0"
description = "Url shorter"
authors = ["Sergei Ilin"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
